# dbx-playground

./: .dbt-checkpoint.yaml  .gitignore  .pre-commit-config.yaml  constraints.txt  justfile  pyproject.toml
confs/: extraction.yaml  ingestion.yaml
docs/: TODO.md  commits.md  dataset.md  project_setup.md
notebooks/: test.ipynb
scripts/: extraction.py
src/dbx_playground/: __main__.py  args.py  cli.py  configs.py  settings.py
src/dbx_playground/jobs/: __init__.py  base.py  extraction.py  ingestion.py
tasks/: clean.just  format.just  terraform.just
terraform/: libraries.tf  main.tf  provider.tf  variables.tf
terraform/modules/aws/iam/: main.tf  variables.tf
terraform/modules/aws/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/databricks/jobs/: main.tf  outputs.tf  variables.tf
terraform/modules/databricks/libraries/: main.tf  outputs.tf  variables.tf
terraform/modules/databricks/notebooks/: main.tf  outputs.tf  variables.tf
terraform/modules/databricks/schemas/: main.tf  outputs.tf  variables.tf
