[project]
name = "dbx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "cyclopts>=3.24.0",
    "hatchling>=1.27.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
]

[project.scripts]
dbx-playground = "dbx_playground.cli:execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
commit = [
    "commitizen>=4.9.1",
    "prek>=0.2.10",
]
dev = [
    "dbt-core>=1.10.13",
    "dbt-databricks>=1.10.9",
    "dotenv>=0.9.9",
    "kaggle>=1.7.4.5",
    "pyspark>=4.0.1",
    "rust-just>=1.43.0",
    "s3fs>=2025.9.0",
]
checks = [
    "ruff>=0.14.1",
    "sqruff>=0.29.3",
]
notebooks = [
    "ipykernel>=7.0.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_schema = "pep440"
version_provider = "pep621"
changelog_start_rev = "v0.1.0"
update_changelog_on_bump = true

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
